syntax = "proto3";
package account;

import "third_party/google/api/annotations.proto";

option go_package = "/account";

service AccountService {
  rpc Get (GetRequest) returns (GetResponse){
    option (google.api.http) = {
      post: "/account/new",
      body: "*"
    };
  }

  rpc Auth (AuthRequest) returns (AuthResponse){
    option (google.api.http) = {
      post: "/account/auth",
      body: "*"
    };
  }
}

message GetRequest {
  string username = 1;  // optional
  string password = 2;  // optional
}

message GetResponse {
  uint64 code = 1;
  string msg = 2;
  Account data = 3;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  uint64 code = 1;
  string msg = 2;
  Account data = 3;
}

message Account {
  uint64 id = 1;
  string username = 2;
  string password = 3;
  uint64 age = 4;
  string email = 5;
  uint64 bank = 6;
  uint64 cellphone = 7;
}